Fixed overflow issue and centered components on page

--- a/project3/src/App.css
+++ b/project3/src/App.css
@@ -2,11 +2,6 @@
   display: flex;
   flex-direction: column;
 }
-.place-card-container{
-  overflow: auto;
-  width: 100%;
-  height: 100%;
-}
 .place-card{
   display: flex;
   align-items: center;
@@ -26,23 +21,6 @@
 #map {
     width: 40%;
     height: 60vh;
-}
-
-.trip-container{
-  display: flex;
-  flex-direction: column;
-  width: 30%;
-  max-height: 50%;
-  overflow: auto;
-  margin: 0 30px 0 10px;
-}
-
-.selected-place-card {
-  display: flex;
-  align-items: center;
-  min-height: 135px;
-  justify-content: space-between;
-  padding: 10px 10px;
 }
 
 .conditional-content{
